Use more efficient variants of URLEncoder::encode and URLDecoder::decode