@@ -23,6 +23,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.StringJoiner;
 import org.apache.http.client.utils.URIBuilder;
@@ -92,7 +93,7 @@ public class URIUtils {
 
   public static String encode(String string) {
     try {
-      return URLEncoder.encode(string, "UTF-8");
+      return URLEncoder.encode(string, StandardCharsets.UTF_8);
     } catch (Exception e) {
       // Should never happen
       throw new RuntimeException(e);
@@ -101,7 +102,7 @@ public class URIUtils {
 
   public static String decode(String string) {
     try {
-      return URLDecoder.decode(string, "UTF-8");
+      return URLDecoder.decode(string, StandardCharsets.UTF_8);
     } catch (Exception e) {
       // Should never happen
       throw new RuntimeException(e);
